<resources>
    <string name="app_name">Ecommerce App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_fragment">Auth Fragment</string>
    <string name="message_wifi_connected">Wifi connected</string>
    <string name="message_cellular_connected">Cellular connected</string>
    <string name="message_no_internet_connection">No internet connection</string>

    <string name="on_boarding_title_1">Find Food You Love</string>
    <string name="on_boarding_title_2">Live Tracking</string>
    <string name="on_boarding_title_3">Fast Delivery</string>

    <string name="on_boarding_description_1">Discover the best foods from over 1,000\nrestaurants and fast delivery to your doorstep</string>
    <string name="on_boarding_description_2">Real time tracking of your food on the app\nonce you place the order</string>
    <string name="on_boarding_description_3">Fast food delivery to your home. Office\nWhenever you are</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="registration_fragment">Registration Fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="login">Login</string>
    <string name="food_delivery">Food Delivery</string>
    <string name="food_app">Food App</string>

    <string name="welcome_to_food_app">Welcome to\nFood App</string>
    <string name="your_favorite_foods_delivered_fast_at_your_doors">Your favorite foods delivered\nfast at your doors</string>
    <string name="sign_with_us">Sign with us</string>
    <string name="start_with_email_or_phone">Start with email or phone</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="menu">Menu</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="more">More</string>
    <string name="add_your_details_to_login">Add your details to login</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_your_details_to_sign_up">Add your details to sign up</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile_no">Mobile No</string>
    <string name="hint_address">Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <string name="title_good_morning_user">Good morning, %1$s!</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="val_msg_enter_name">Please enter name</string>
    <string name="val_msg_enter_email">Please enter email</string>
    <string name="val_msg_enter_valid_email">Please enter valid email</string>
    <string name="val_msg_enter_mobile_number">Please enter mobile number</string>
    <string name="val_msg_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="val_msg_enter_address">Please enter address</string>
    <string name="val_msg_enter_password">Please enter password</string>
    <string name="val_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="val_msg_password_requirenments">Password minimum 8 character with at least one uppercase,one small case,one special symbol</string>
    <string name="val_msg_password_not_matched">Password doesn\'t match</string>
    <string name="submit">Submit</string>

    <string name="verify_your_email">Verify your Email</string>
    <string name="we_have_sent_an_otp_your_email">We have sent an OTP your email</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="popular_restaurants">Popular Restaurants</string>
    <string name="top_dishes">Top dishes</string>
    <string name="top_categories">Top Categories</string>
    <string name="recent">Recent View</string>
    <string name="view_all">View all</string>
    <string name="go_to_home_details">Go to Home Details</string>
    <string name="delivering_to">Delivering to</string>
    <string name="search_food">Search food</string>
    <string name="no_data_found">No data Found</string>
    <string name="add">Add</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="description">Description</string>
    <string name="per_portion">/ per Portion</string>
    <string name="carbs">Carbs</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="currency_amount">Rs %1$s</string>
    <string name="order_details">Order Details</string>
    <string name="order_history">Order History</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_placed_msg">Your order is placed successfully</string>
    <string name="estimated_time_for_order">Estimated time of delivery 12 hours</string>
    <string name="order_in_kitchen">Order in Kitchen</string>
    <string name="your_order_is_placed_successfully_our_chef_will_soon_begin_his_magic">Your order is placed successfully! Our chef will soon begin his magic.</string>
    <string name="estimated_time_of_delivery_30_minutes">Estimated time of delivery 30 minutes.</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="your_order_is_placed_successfully">Your order is placed successfully</string>
    <string name="payment_details">Payment Details</string>
    <string name="my_orders">My Orders</string>
    <string name="notifications">Notifications</string>
    <string name="inbox">Inbox</string>
    <string name="about_us">About Us</string>
    <string name="val_msg_enter_otp">Please enter otp</string>
    <string name="val_msg_enter_valid_otp">Please enter valid otp</string>
    <string name="logout">Logout</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="change">Change</string>
    <string name="payment_method">Payment method</string>
    <string name="add_card">+ Add Card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="_1234">*** *** *** 1234</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="check_out">Checkout</string>
    <string name="restaurant_details">Restaurant Details</string>
    <string name="product_details">Product Details</string>
    <string name="msg_restaurant_added_in_fav_list">Restaurant removed from favorite list</string>
    <string name="msg_restaurant_removed_from_fav_list">Restaurant added to favorite list</string>
    <string name="msg_product_added_to_cart">Product added to Cart successfully!</string>
    <string name="product_removed_from_cart">Product removed from Cart successfully!</string>
    <string name="my_cart">My Cart</string>
    <string name="apply_for_coupon">Apply for coupon</string>
    <string name="spec_wallet">SPEC Wallet</string>
    <string name="order_id">Order Id :- %1$s</string>
    <string name="amount">Amount :- %1$s</string>
    <string name="date">Date :- %1$s</string>

    <string-array name="location_array_list">
        <item>S.G Highway</item>
        <item>Naroda</item>
        <item>Ghatlodia</item>
        <item>Navrangpura</item>
        <item>Naranpura</item>
        <item>Thaltej</item>
        <item>Narol</item>
    </string-array>

    <string name="rs">Rs. %1$s</string>
    <string name="minus_rs">-Rs. %1$s</string>
    <string name="msg_product_of_another_restaurant_is_already_exist">Product of another Restaurant is already exist in the cart.</string>

    <string name="msg_confirm_change_cart_item">Item(s) of another Restaurant is already exist in the Cart. Do you really want to add this item to your Cart? This will remove all your existing item(s) from the Cart.</string>
    <string name="send_order">Send Order</string>
    <string name="msg_order_created">Order Created Successfully</string>
    <string name="add_new_address">Add New Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="select_location">Select Location</string>
    <string name="add_address">Add Address</string>
    <string name="save">Save</string>
    <string name="no_address_found_add_new_address">No Address Found. Please click to add New one</string>
    <string name="primary_address_changed">Your primary address changed successfully!</string>
    <string name="undo">Undo</string>

    <string-array name="address_type">
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>

    <string name="msg_confirm_delete_address">Are you sure you want to delete the Address?</string>
    <string name="msg_confirm_delete_address_line">Are you sure you want to delete this address line?</string>
    <string name="add_primary_address">Please add primary address</string>
    <string name="msg_can_not_delete_primary_address">You can\'t remove primary address</string>
    <string name="msg_confirm_logout">Are you sure you want to logout?</string>
    <string name="msg_address_added_successesfully">Address Added Successfully!</string>
    <string name="msg_enable_location_permission_to_set_the_shipping_address">Enable location permission to set the Shipping Address</string>
    <string name="msg_enable_gps_permission_to_set_the_shipping_address">Enable GPS to set current location as a Shipping Address</string>

    <string name="msg_no_current_location_found">No current location found</string>
    <string name="msg_already_in_home_screen">You are already in Home Screen</string>

</resources>
