<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/llOtp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.OtpFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/verify_your_email"
        android:textColor="@color/color_blue_or_white"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/we_have_sent_an_otp_your_email"
        android:textColor="@color/color_blue_or_white"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/we_have_sent_an_otp_your_email"
        android:textColor="@color/color_blue_or_white"
        android:textSize="16sp" />

    <com.pdrozz.view.PinView
        android:id="@+id/pinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/sf_pro_medium"
        android:textColor="@color/color_on_boarding_description"
        android:textSize="20sp"
        android:textStyle="bold"
        app:isPassword="false"
        app:pinCount="6"
        app:pinPadding="6dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOtpVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:autoSizeMaxTextSize="20dp"
        android:background="@drawable/bg_button_login"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />


</androidx.appcompat.widget.LinearLayoutCompat>