<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue6"
    tools:context=".ui.fragments.RegistrationFragment">

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="0dp"
        android:text="@string/welcome_to_food_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Welcome Description -->
    <TextView
        android:id="@+id/tvWelcomeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="0dp"
        android:text="@string/your_favorite_foods_delivered_fast_at_your_doors"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <!-- Food Image -->
    <ImageView
        android:id="@+id/ivFoodPlate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/img_food_plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuideLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivFoodPlate">

        <View
            android:id="@+id/viewLeft"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:background="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/tvSignWithUs"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvSignWithUs"
         />

        <TextView
            android:id="@+id/tvSignWithUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_with_us"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorBlue"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/viewRight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/viewLeft"
            app:layout_constraintTop_toTopOf="@+id/viewLeft" />

        <View
            android:id="@+id/viewRight"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/tvSignWithUs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvSignWithUs" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--    <TextView-->
    <!--        android:id="@+id/textView"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="48dp"-->
    <!--        android:text="@string/registration_fragment"-->
    <!--        android:textColor="@color/colorAccent"-->
    <!--        android:textSize="24sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btnRegister"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="48dp"-->
    <!--        android:text="Register"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btnLogin"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="48dp"-->
    <!--        android:text="Login"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />-->
</androidx.constraintlayout.widget.ConstraintLayout>